css collapse fixed

--- a/Webapp/assets/less/mypage.less
+++ b/Webapp/assets/less/mypage.less
@@ -45,6 +45,7 @@
       font-size: 32px;
       font-weight: 700;
       margin-bottom: 30px;
+      line-height: 1;
     }
     .statistics,
     .schedule-wrapper {
@@ -58,14 +59,20 @@
       }
       dl {
         margin-bottom: 30px;
+        dt,dd {
+          color: #fff;
+          line-height: 1;
+          font-weight: 400;
+          letter-spacing: -0.5px;
+        }
         dt {
           font-size: 28px;
           margin-bottom: 10px;
-          color: #fff;
         }
         dd {
-          color: #fff;
+          margin-bottom: 5px;
           font-size: 24px;
+
         }
       }
     }
